# queue-max

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  stress_heavy.py  stress_test.py  test_shard_scaling.py
.github/workflows/: ci.yml  publish.yml
docs/: aprenda_queue_max.md  index.md  livro_queue_max.md  manual_completo.md  stress-test.md
examples/: ai_rate_limited.py  basic_usage.py  webhook_processor.py
src/queue_max/: __init__.py  cli.py  exceptions.py
src/queue_max/contrib/: __init__.py  events.py
src/queue_max/contrib/django/: __init__.py
src/queue_max/contrib/django/management/commands/: queue_purge.py  queue_stats.py  queue_worker.py
src/queue_max/contrib/fastapi/: __init__.py
src/queue_max/contrib/flask/: __init__.py
src/queue_max/core/: __init__.py  circuit_breaker.py  database.py  decorator.py  queue.py  rate_limiter.py  worker.py
src/queue_max/core/db/: __init__.py  connection.py  constants.py  manager.py  repository.py  shard_group.py
src/queue_max/core/queue/: __init__.py  queue.py
src/queue_max/core/tasks/: __init__.py  base.py  periodic.py  retryable.py
src/queue_max/core/workers/: __init__.py  async_worker.py  base.py  pool.py
src/queue_max/models/: __init__.py  job.py
src/queue_max/utils/: __init__.py  helpers.py
src/robusta_queue/: __init__.py  cli.py
src/robusta_queue/contrib/: __init__.py
src/robusta_queue/contrib/django/: __init__.py
src/robusta_queue/contrib/django/management/commands/: queue_purge.py  queue_stats.py  queue_worker.py
src/robusta_queue/contrib/fastapi/: __init__.py
src/robusta_queue/contrib/flask/: __init__.py
src/robusta_queue/core/: __init__.py  circuit_breaker.py  database.py  decorator.py  queue.py  rate_limiter.py  worker.py
src/robusta_queue/models/: __init__.py  job.py
src/robusta_queue/utils/: __init__.py
tests/: conftest.py  stress_test.py  test_async_worker.py  test_circuit_breaker.py  test_concurrency.py  test_connection_manager.py  test_core_coverage.py  test_core_errors.py  test_core_gaps.py  test_final_gaps.py  test_helpers.py  test_integration.py  test_queue.py  test_rate_limiter.py  test_repository.py  test_shard_group.py  test_task_decorator.py  test_worker.py
